- Update README to reflect changes in project setup and development instructions - Remove obsolete UI code and provide instructions to use the new UI in the frontend directory

--- a/src/sejm_app/templates/home.html
+++ b/src/sejm_app/templates/home.html
@@ -20,6 +20,10 @@
        class="position-fixed top-5 end-0 p-lg-3 p-1"
        style="z-index: 11"></div>
   <div class="row border-bottom bg-banner mx-0 pt-4 ">
+    <div class="alert alert-danger fs-2 p-5">
+      This UI is obsolete, and may not work , It will be removed in the future. Please use the new UI.(./frontend dir)
+      
+    </div>
     <div class="offset-lg-1 col-xl-6 col-12 my-5 pt-3">
       <b class="display-3 mb-4">Parlament Pod Lupą</b>
       <p class=" text-muted lead my-2">
