--- a/frontend/app/home.module.css
+++ b/frontend/app/home.module.css
@@ -3,6 +3,7 @@
     overflow: hidden;
 }
 
+
 .bgBanner::before {
     content: "";
     position: absolute;
@@ -10,7 +11,7 @@
     left: 111px;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 25%, rgba(255, 255, 255, 0.5) 100%),
+    background-image: linear-gradient(to right, var(--banner-image-start) 25%, var(--banner-image-end) 100%),
         url('/sejm.webp');
     background-size: cover;
     background-position: 50% 25%;
