--- a/frontend/app/home.module.css
+++ b/frontend/app/home.module.css
@@ -8,7 +8,7 @@
     content: "";
     position: absolute;
     top: 0;
-    left: 111px;
+    left: 3vw;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to right, var(--banner-image-start) 25%, var(--banner-image-end) 100%),
