Update dependencies and add serializers

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -28,6 +28,11 @@
     --destructive-foreground: 0 0% 100%;
     --ring: 350 67% 58%;
     --radius: 0.5rem;
+    --chart-1: 173 58% 39%;
+    --chart-2: 340 45% 55%;
+    --chart-3:  43 74% 66%;
+    --chart-4: 43 44% 46%;
+    --chart-5: 197 37% 24%;
   }
 
   .dark {
@@ -61,6 +66,11 @@
     --input: 217 19% 27%;
     /* gray-700 */
     --ring: 212.7 26.8% 83.9%;
+    --chart-1: 160 60% 45%;
+    --chart-2: 340 75% 55%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 220 70% 50%;
+    --chart-5: 280 65% 60%;
   }
 }
 
