chore: Update globals.css and package.json, and add chart-legend.tsx and switch.tsx components

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -33,6 +33,7 @@
     --chart-3:  43 74% 66%;
     --chart-4: 43 44% 46%;
     --chart-5: 197 37% 24%;
+    --chart-6: 297 37% 14%;
   }
 
   .dark {
@@ -71,6 +72,7 @@
     --chart-3: 30 80% 55%;
     --chart-4: 220 70% 50%;
     --chart-5: 280 65% 60%;
+    --chart-6: 40 65% 60%;
   }
 }
 
